# tripy

./: core.py  earclip.py  earclip_np.py  main.py  pyproject.toml  setup.py  tripy.py  utils.py
