[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tripy"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ddt>=1.7.2", "numpy<2.0"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools_scm]
